<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background= "@drawable/gradient">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:padding="12dp">



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp"
                android:fontFamily="cursive"
                android:text="@string/login_form_title"
                android:textAlignment="center"
                android:textSize="56sp" />


            <EditText
                android:id="@+id/activity_main_usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/edit_text"
                android:fontFamily="sans-serif-condensed-medium"
                android:hint=" Phone number,email or Username"
                android:inputType="textMultiLine"
                android:textColor="#000"
                android:textColorHint="@color/cardview_dark_background" />


            <EditText
                android:id="@+id/activity_main_passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/edit_text"
                android:fontFamily="sans-serif-condensed-medium"
                android:hint=" Password"
                android:inputType="textPassword"
                android:textColor="#000"
                android:textColorHint="@color/cardview_dark_background" />

            <Button
                android:id="@+id/activity_main_loginButton"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@android:color/holo_blue_bright"
                android:text="@string/login_form_button"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:text="@string/forgot_login"
                android:textAlignment="center"
                android:textColor="#fff" />

        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp" >

        <ImageView
            android:layout_width="50dp"
            android:layout_height="25dp"
            android:src="@drawable/facebook_logo"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:gravity="center_horizontal"
            android:text="@string/facebook_login"
            android:textAlignment="center"
            android:textColorLink="#fff"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:textSize="14sp"
        android:textColor="#fff"
        android:layout_margin="90dp"/>

</LinearLayout>